--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
 <body>
 
 
-    <div class="main container">
+    <div class="main-container">
         <div class="top-header">
                 <button class="home-btn">Home</button>   <button class="map-btn">Map</button> <button class="chart-btn">Chart</button> 
-                <form type="search" aria-placeholder="search for breweries"></form>
+                <input type="search" id="site-search" name="q" placeholder="Search">
+                <!-- <button>Search</button> -->
         </div>
-        <div class="logo-container">
-            <img class="logo-img"src="images/logo.jpg" width="350" height="300" />
-        </div>
-        <div class="body-container">
-            <h1>Welcome Users</h1>
-            <h2>Breweries Near You</h2>
 
-            <div class="map" id='map' style='width: 430px; height: 330px;'> </div>
+        <div class="img-container">
+            <h1 class="Wannabeer" >Wannabeer</h1>
+        </div>
+
+        <div class="body-container">
+            <h2>Welcome Users</h2>
+            <h3>Breweries Near You</h3>
+            <p class="map">placeholder for map</p>
+            <!-- <div class="map" id='map' style='width: 430px; height: 330px;'> </div> -->
 
             <button>Button</button>
 
             <div class="chart-container">
-                <h3>Get Your Beer On!</h3>
+                <h4>Get Your Beer On!</h4>
                 <div class="list-of-brewers">
                     <p>left</p>
                 </div>
