styling the search box and top header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main-container">
         <div class="top-header">
                 <button class="home-btn">Home</button>   <button class="map-btn">Map</button> <button class="chart-btn">Chart</button> 
-                <input type="search" id="site-search" name="q" placeholder="Search">
+                <input type="search" class="search-box" name="search" placeholder="Search for Breweries">
                 <!-- <button>Search</button> -->
         </div>
 
