styling the front page by changing the color and size of map

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div class="body-container">
             <h2>Welcome Users</h2>
             <h3>Breweries Near You</h3>
-            <p class="map">placeholder for map</p>
-            <!-- <div class="map" id='map' style='width: 430px; height: 330px;'> </div> -->
+            <!-- <p class="map">placeholder for map</p> -->
+            <div class="map" id='map' style='width: 390px; height: 300px;'> </div>
 
             <button>Button</button>
 
