adding visual scrolling to the page

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         </div>
 
         <div class="body-container">
-            <h2>Welcome Users</h2>
-            <h3>Breweries Near You</h3>
+            <h2 class="welcome">Welcome Users</h2>
+            <h3 class="near-you">Breweries Near You</h3>
             <!-- <p class="map">placeholder for map</p> -->
             <div class="map" id='map' style='width: 390px; height: 300px;'> </div>
 
             <button>Button</button>
 
             <div class="chart-container">
-                <h4>Get Your Beer On!</h4>
+                <h4 class="beer-on">Get Your Beer On!</h4>
                 <div class="list-of-brewers">
                     <p>left</p>
                 </div>
@@ -44,7 +44,10 @@
         </div>
 
         <div class="footer">
-            <p>footer</p>
+            <div class="footer-btn">
+            <button class="about-btn">About US</button> <button class="contact-btn">Contact Us</button>
+            </div>
+            <p class="copy-right">&copy;Wannabeer</p>
         </div>
     </div>
 
