resizing the css for different divice screens

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
     <div class="main-container">
         <div class="top-header">
-                <button class="home-btn">Home</button>   <button class="map-btn">Map</button> <button class="chart-btn">Chart</button> 
-                <input type="search" class="search-box" name="search" placeholder="Search for Breweries">
+                <button class="home-btn">Home</button>   <button class="map-btn">Map</button> <button class="chart-btn">Chart</button>
                 <!-- <button>Search</button> -->
         </div>
 
@@ -28,7 +27,8 @@
             <h2 class="welcome">Welcome Users</h2>
             <h3 class="near-you">Breweries Near You</h3>
             <!-- <p class="map">placeholder for map</p> -->
-            <div class="map" id='map' style='width: 390px; height: 300px;'> </div>
+            <div class="map" id='map'> </div>
+            <!-- style='width: 390px; height: 300px;' -->
 
             <button>Button</button>
 
