adds functions to print brewery data to detail area

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
             <div class="chart-container">
                 <h4 class="beer-on">Get Your Beer On!</h4>
-                <div class="list-of-brewers">
+                <div class="list-of-brewers" data-brewery>
                     <p>left</p>
                 </div>
-                <div class="info">
+                <div class="info" data-detail>
                     <p>right</p>
                 </div>
             </div>
