styling css for different displays

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <h3 class="near-you">Breweries Near You</h3>
             
             <!-- <p class="map">placeholder for map</p> -->
-            <div class="map" id='map'> </div>
+            <div class="map-container">
+                <div class="map" id='map'> </div>
+            </div>
             <!-- style='width: 390px; height: 300px;' -->
 
             <button>Button</button>
