--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
 </head>
 <body>
 
-
     <div class="main-container">
         <div class="top-header">
-                <button class="home-btn">Home</button>   <button class="map-btn">Map</button> <button class="chart-btn">Chart</button> 
-                <!-- <input type="search" class="search-box" name="search" placeholder="Search for Breweries"> -->
-                <!-- <button>Search</button> -->
+                <button class="map-btn"><a href="#map1" style="color: white">Map</a></button> <button class="chart-btn"><a href="#chart" style="color: white">chart</a></button>
         </div>
 
-        <div class="img-container">
+        <div class="front-page">
             <h1 class="Wannabeer" >Wannabeer</h1>
+
+            <div class="arrow-container">
+                <p><i class="arrow down"></i></p>
+            </div>
+            
+            <h2 class="welcome">Welcome Users</h2>
+        </div>
+
+        <div class="scroll-container">
+        <p class="scroll">Scroll Down</p>
         </div>
 
         <div class="body-container">
-            <h2 class="welcome">Welcome Users</h2>
-            <h3 class="near-you">Breweries Near You</h3>
+            <h3 class="near-you" id="map1">Breweries Near You</h3>
             
             <!-- <p class="map">placeholder for map</p> -->
             <div class="map-container">
@@ -34,10 +40,10 @@
             </div>
             <!-- style='width: 390px; height: 300px;' -->
 
-            <button>Button</button>
+            <!-- <button>Button</button> -->
 
             <div class="chart-container">
-                <h4 class="beer-on">Get Your Beer On!</h4>
+                <h4 class="beer-on" id="chart">Get Your Beer On!</h4>
                 <div class="list-of-brewers">
                     <p>left</p>
                 </div>
@@ -54,9 +60,6 @@
             <p class="copy-right">&copy;Wannabeer</p>
         </div>
     </div>
-
-
-
 
 <script src="scripts/index.js"></script>
 </body>
