--- a/index.html
+++ b/index.html
@@ -34,13 +34,9 @@
         <div class="body-container">
             <h3 class="near-you" id="map1">Breweries Near You</h3>
             
-            <!-- <p class="map">placeholder for map</p> -->
             <div class="map-container">
                 <div class="map" id='map'> </div>
             </div>
-            <!-- style='width: 390px; height: 300px;' -->
-
-            <!-- <button>Button</button> -->
 
             <div class="chart-container">
                 <h4 class="beer-on" id="chart">Get Your Beer On!</h4>
@@ -48,7 +44,7 @@
                     <p>left</p>
                 </div>
                 <div class="info">
-                    <p>right</p>
+                    <p>List</p>
                 </div>
             </div>
         </div>
