adds last minute touches

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="main-container">
         <div class="top-header">
-                <button class="map-btn"><a href="#map1" style="color: white">Map</a></button> <button class="chart-btn"><a href="#chart" style="color: white">chart</a></button>
+                <button class="map-btn"><a href="#map1" style="color: white">Map</a></button> <button class="chart-btn"><a href="#chart" style="color: white">Chart</a></button>
         </div>
 
         <div class="front-page">
